--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -13,7 +13,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1.0"
@@ -21,11 +21,28 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/currentLocation"
-            android:text="@string/hello_world"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large">
+            android:layout_height="wrap_content"
+            android:id="@+id/message_title"
+            android:text="@string/create_message"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
+            android:gravity="center"
+            android:layout_alignParentTop="true">
         </TextView>
 
-    </LinearLayout>
+        <EditText
+            android:layout_below="@+id/message_title"
+            android:layout_above="@+id/drop_button"
+            android:id="@+id/message_edit"
+            android:layout_width="fill_parent"
+            android:layout_height="0dip"
+            android:inputType="text" />
+
+        <Button
+            android:id="@+id/drop_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/create_button"
+            android:layout_alignParentBottom="true"/>
+
+    </RelativeLayout>
 </LinearLayout>
