Apparently, I was attempting to be too clever. 	While the headers formatting is useful for the two pane screen, 	it appears that the general usability of them is lacking. 		1: I cannot appear to add other preferences to the 		   screen with the headers displayed on it. 		2: I cannot appear to use the header syntax to link to 		   non-preference fragments. If this can be done, it 		   likely will require passing more arguments than is worth. 	Next commit, am going to change to a single preference screen. 	This will allow for us to easily implement all of the desired 	settings, rather than fighting through all of the bureaucratic toys.

--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -1,7 +1,7 @@
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- These settings headers are only used on tablets. -->
-
+    <!-- Default Headers
     <header
         android:fragment="com.yarmatey.messageinabottle.SettingsActivity$GeneralPreferenceFragment"
         android:title="@string/pref_header_general"
@@ -16,11 +16,25 @@
         android:fragment="com.yarmatey.messageinabottle.SettingsActivity$DataSyncPreferenceFragment"
         android:title="@string/pref_header_data_sync"
         android:icon="@drawable/ic_sync_black_24dp" />
+        -->
 
     <header
         android:fragment="com.yarmatey.messageinabottle.SettingsActivity$BottlesPreferenceFragment"
         android:title="@string/pref_header_bottles"
         android:icon="@drawable/floating_bottle"
         />
+
+    <header
+        android:fragment="com.yarmatey.messageinabottle.InventoryFragment"
+        android:title='@string/userTutorial'
+        android:summary="@string/userTutorial_description"
+        />
+
+    <header
+        android:fragment="com.yarmatey.messageinabottle.LogInActivityFragment"
+        android:title="@string/socialLink"
+        android:summary="@string/socialLink_description"
+        />
+
 
 </preference-headers>
