--- a/app/src/main/res/xml/pref_bottles.xml
+++ b/app/src/main/res/xml/pref_bottles.xml
@@ -1,34 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-
+    
+    <!-- Warn on Discard
+    -->
     <SwitchPreference
-        android:key="example_switch"
-        android:title="@string/pirate_mouth"
-        android:summary="@string/pirate_mouth_description"
-        android:defaultValue="true" />
+        android:key="discardWarning_switch"
+        android:title="@string/discardWarning"
+        android:summary="@string/discardWarning_description"
+        android:defaultValue="true"/>
 
-    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
-    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
-    <EditTextPreference
-        android:key="example_text"
-        android:title="@string/pref_title_display_name"
-        android:defaultValue="@string/pref_default_display_name"
-        android:selectAllOnFocus="true"
-        android:inputType="textCapWords"
-        android:capitalize="words"
-        android:singleLine="true"
-        android:maxLines="1" />
-
-    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
-         dismiss it. -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
+    <!-- Frequency of Bottle Pickup
+    -->
     <ListPreference
-        android:key="example_list"
-        android:title="@string/pref_title_add_friends_to_messages"
-        android:defaultValue="-1"
-        android:entries="@array/pref_example_list_titles"
-        android:entryValues="@array/pref_example_list_values"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null" />
+        android:key="pickupFreq_list"
+        android:title="@string/pickupFreq"
+        android:summary="@string/pickupFreq_description"
+        android:entries="@array/pickupFreq_titles"
+        android:entryValues="@array/pickupFreq_values"
+        android:defaultValue="60"/>
+
+    <!-- Enable Maps
+            True: Can see Google Maps
+            False: Cannot see Google Maps
+    -->
+    <SwitchPreference
+        android:key="map_switch"
+        android:title="@string/maps"
+        android:summary="@string/maps_description"
+        android:defaultValue="false"/>
+
+    <!-- Adult Language filter
+            True: Adult Language Allowed
+            False: Adult Language Blocked
+    -->
+    <SwitchPreference
+        android:key="sailor_switch"
+        android:title="@string/sailor_mouth"
+        android:summary="@string/sailor_mouth_description"
+        android:defaultValue="false" />
+
+    <!-- Other Filters Menu
+            Links to another menu that allows the user to type in filter entries.
+    -->
 
 </PreferenceScreen>
