--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,15 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--One part backwards compatability, but mostly to make sure we have a working set of settings.-->
+    <PreferenceScreen
+        android:fragment="com.yarmatey.messageinabottle.SettingsActivity$BottlesPreferenceFragment"
+        android:title="@string/pref_header_bottles"
+        android:icon="@drawable/floating_bottle"
+        >
 
-    <!-- Frequency of Bottle Pickup
-    -->
+        <!-- Warn on Discard
+        -->
+        <SwitchPreference
+            android:key="discardWarning_switch"
+            android:title="@string/discardWarning"
+            android:summary="@string/discardWarning_description"
+            android:defaultValue="true"/>
+
+        <!-- Frequency of Bottle Pickup
+        -->
+        <ListPreference
+            android:key="pickupFreq_list"
+            android:title="@string/pickupFreq"
+            android:summary="@string/pickupFreq_description"
+            android:entries="@array/pickupFreq_titles"
+            android:entryValues="@array/pickupFreq_values"
+            android:defaultValue="60"/>
+
+        <!-- Enable Maps
+                True: Can see Google Maps
+                False: Cannot see Google Maps
+        -->
+        <SwitchPreference
+            android:key="map_switch"
+            android:title="@string/maps"
+            android:summary="@string/maps_description"
+            android:defaultValue="false"/>
+
+        <!-- Adult Language filter
+                True: Adult Language Allowed
+                False: Adult Language Blocked
+        -->
+        <SwitchPreference
+            android:key="sailor_switch"
+            android:title="@string/sailor_mouth"
+            android:summary="@string/sailor_mouth_description"
+            android:defaultValue="false" />
+
+        <!-- Other Filters Menu
+                Links to another menu that allows the user to type in filter entries.
+        -->
+        <Preference
+            android:title="@string/filters"
+            android:summary="@string/filters_description"
+            android:fragment="com.yarmatey.messageinabottle.LogInActivityFragment"
+            />
+
+    </PreferenceScreen>
+
+    <SwitchPreference
+        android:key="pirate_switch"
+        android:title="@string/pirate"
+        android:summary="@string/pirate_description"
+        android:defaultValue="false" />
+
     <ListPreference
-        android:key="pickupFreq_list"
-        android:title="@string/pickupFreq"
-        android:summary="@string/pickupFreq_description"
-        android:entries="@array/pickupFreq_titles"
-        android:entryValues="@array/pickupFreq_values"
+        android:key="color_list"
+        android:title="@string/color"
+        android:summary="@string/color_description"
+        android:entries="@array/color_titles"
+        android:entryValues="@array/color_values"
         android:defaultValue="60"/>
+
+
+    <!-- May need to work on the below, they may not work well, if at all. May need to switch them to intents instead of fragments for example.
+    -->
+    <Preference
+        android:title='@string/userTutorial'
+        android:summary="@string/userTutorial_description"
+        android:fragment="com.yarmatey.messageinabottle.InventoryFragment"
+        />
+
+    <Preference
+        android:title="@string/socialLink"
+        android:summary="@string/socialLink_description"
+        android:fragment="com.yarmatey.messageinabottle.LogInActivityFragment"
+        />
 
 
 </PreferenceScreen>
