--- a/app/src/main/res/menu/menu_message.xml
+++ b/app/src/main/res/menu/menu_message.xml
@@ -2,6 +2,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.yarmatey.messageinabottle.MessageActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+    <item android:id="@+id/drop_bottle"
+        android:title="Drop Bottle"
+        android:orderInCategory="50"
+        app:showAsAction="always"
+        android:icon="@drawable/floating_bottle"/>
+    <item android:id="@+id/archive_bottle"
+        android:title="Archive Bottle"
+        android:orderInCategory="75"
+        app:showAsAction="always"
+        android:icon="@drawable/common_full_open_on_phone" />
 </menu>
