--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,5 +1,42 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="com.yarmatey.messageinabottle.MessageActivityFragment"
-    tools:layout="@layout/fragment_message" android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        tools:context="com.yarmatey.messageinabottle.MessageActivity"
+        android:id="@+id/coord_layout">
+        <android.support.design.widget.AppBarLayout android:id="@+id/appbar"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:paddingTop="@dimen/appbar_padding_top"
+            android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:layout_scrollFlags="scroll|enterAlways"
+            android:minHeight="?attr/actionBarSize">
+        </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.AppBarLayout>
+        </android.support.design.widget.CoordinatorLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:layout_below="@+id/coord_layout"
+            android:background="@color/colorPrimaryDark">
+            <EditText
+                android:id="@+id/message_edit"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:inputType="text"
+                android:gravity="center_horizontal"
+                android:layout_margin="@dimen/fab_margin"
+                android:hint="Put yar message here, ya land lubber!"
+                android:background="@drawable/paper_texture"/>
+        </LinearLayout>
+</RelativeLayout>
