Tabs are now locked in place on the inventory menu. If you want to add the ability to have them move again, activity_inventory.xml line 25, add 	app:layout_scrollFlags="scroll|enterAlways" If instead, you want to lock more down, consider removing line 17 instead of or in addition to line 25.
Also, in fragment_drifting_bottles.xml, scruvy -> scurvy

--- a/app/src/main/res/layout/fragment_drifting_bottles.xml
+++ b/app/src/main/res/layout/fragment_drifting_bottles.xml
@@ -36,7 +36,7 @@
         android:layout_height="fill_parent"
         android:textSize="24sp"
         android:gravity="center_horizontal"
-        android:text="Nothin' seems to be here, yah scruvy dog!"/>
+        android:text="Nothin' seems to be here, yah scurvy dog!"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
