--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -8,7 +8,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        tools:context="com.yarmatey.messageinabottle.MessageActivity"
+        tools:context="com.yarmatey.messageinabottle.message.MessageActivity"
         android:id="@+id/coord_layout">
         <android.support.design.widget.AppBarLayout android:id="@+id/appbar"
             android:layout_width="match_parent" android:layout_height="wrap_content"
