--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.yarmatey.messageinabottle.RegisterActivity">
+    tools:context="com.yarmatey.messageinabottle.login.RegisterActivity">
 
     <ImageView
         android:layout_width="fill_parent"
