--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -36,7 +36,7 @@
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="end|bottom" android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/floating_bottle"/>
+        android:src="@drawable/quill"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
