--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -29,11 +29,15 @@
             android:orientation="vertical"
             android:layout_below="@+id/coord_layout"
             android:background="@color/colorPrimaryDark">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""/>
             <EditText
                 android:id="@+id/message_edit"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:gravity="center_horizontal"
                 android:layout_margin="@dimen/fab_margin"
                 android:hint="Put yar message here, ya land lubber!"
